Lab Verison/xsm_expl/Stages/6/Frontend/y.output
   0  $accept : start $end

   1  start : TypeDefBlock GDeclBlock FDefBlock MainBlock
   2        | TypeDefBlock GDeclBlock MainBlock
   3        | TypeDefBlock GDeclBlock

   4  TypeDefBlock : TYPE TypeDefList ENDTYPE
   5               |

   6  TypeDefList : TypeDefList TypeDef
   7              | TypeDef

   8  TypeDef : TypeID '{' FieldDeclList '}'

   9  TypeID : ID

  10  FieldDeclList : FieldDeclList FieldDecl
  11                | FieldDecl

  12  FieldDecl : TypeName ID ';'

  13  TypeName : INT
  14           | STR
  15           | ID

  16  Slist : Slist Stmt ';'
  17        | Stmt ';'

  18  Stmt : inputStmt
  19       | outputStmt
  20       | assignStmt
  21       | ifStmt
  22       | whileStmt
  23       | doWhileStmt
  24       | breakStmt
  25       | continueStmt
  26       | breakPointStmt
  27       | DynamicMemStmt

  28  inputStmt : READ expr

  29  outputStmt : WRITE expr

  30  assignStmt : ID '=' expr
  31             | ID '[' expr ']' '=' expr
  32             | MUL ID '=' expr
  33             | StructField '=' expr

  34  retVal : expr

  35  retStmt : RETURN retVal ';'

  36  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  37         | IF expr THEN Slist ENDIF

  38  whileStmt : WHILE expr DO Slist ENDWHILE

  39  doWhileStmt : DO Slist WHILE expr ENDWHILE

  40  breakStmt : BREAK

  41  continueStmt : CONTINUE

  42  breakPointStmt : BREAKPOINT

  43  GDeclBlock : DECL GDeclList ENDDECL
  44             | DECL ENDDECL

  45  GDeclList : GDeclList GDecl
  46            | GDecl

  47  GDecl : GType GIDList ';'
  48        | GType TupleDecl GIDList ';'

  49  GType : INT
  50        | STR
  51        | ID
  52        | TUPLE ID

  53  GIDList : GIDList ',' GID
  54          | GID

  55  GID : ID
  56      | ID '[' NUM ']'
  57      | ID '(' ParamList ')'
  58      | GPtrID
  59      | GPtrID '(' ParamList ')'

  60  GPtrID : MUL ID

  61  TupleDecl : '(' TupleFieldDeclList ')'

  62  TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl
  63                     | TupleFieldDecl

  64  TupleFieldDecl : TupleFieldType TupleFieldName

  65  TupleFieldType : INT
  66                 | STR

  67  TupleFieldName : ID

  68  ParamList : ParamList ',' Param
  69            | Param
  70            |

  71  Param : ParamType ID

  72  ParamType : INT
  73            | STR
  74            | INT MUL
  75            | STR MUL
  76            | ID

  77  ArgList : ArgList ',' Arg
  78          | Arg
  79          |

  80  Arg : expr

  81  FDefBlock : FDefBlock FDef
  82            | FDef

  83  FID : ID

  84  FDef : FuncSign '{' LDeclBlock FBody '}'

  85  FuncSign : FuncType FID '(' ParamList ')'

  86  FuncType : INT
  87           | STR
  88           | INT MUL
  89           | STR MUL
  90           | ID

  91  FBody : BEGIN_ Slist retStmt END ';'

  92  LDeclBlock : DECL LDeclList ENDDECL
  93             |
  94             | DECL ENDDECL

  95  LDeclList : LDeclList LDecl
  96            | LDecl

  97  LDecl : LType LIDList ';'
  98        | LType TupleDecl LIDList ';'

  99  LType : INT
 100        | STR
 101        | ID
 102        | TUPLE ID

 103  LIDList : LIDList ',' LID
 104          | LID

 105  LID : ID
 106      | ID '[' NUM ']'
 107      | MUL ID

 108  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

 109  MainFunc : INT MAIN

 110  MBody : BEGIN_ Slist retStmt END ';'

 111  DynamicMemStmt : AllocStmt
 112                 | FreeStmt
 113                 | InitializeStmt

 114  AllocStmt : DynaMemID ALLOC '(' ')'

 115  FreeStmt : DynaMemID FREE '(' expr ')'

 116  InitializeStmt : DynaMemID INITIALIZE '(' ')'

 117  DynaMemID : ID '='
 118            | ID '[' expr ']' '='

 119  StructField : StructField '.' ID
 120              | StructID '.' ID

 121  StructID : ID
 122           | ID '[' expr ']'

 123  expr : expr PLUS expr
 124       | expr MINUS expr
 125       | expr MUL expr
 126       | expr DIV expr
 127       | expr MOD expr
 128       | expr EQ expr
 129       | expr NEQ expr
 130       | expr LT expr
 131       | expr LTE expr
 132       | expr GT expr
 133       | expr GTE expr
 134       | expr AND expr
 135       | expr OR expr
 136       | NOT expr
 137       | '(' expr ')'
 138       | StructField
 139       | ID '(' ArgList ')'
 140       | ID '[' expr ']'
 141       | AMPERSAND ID
 142       | MUL ID
 143       | ID
 144       | NUM
 145       | STRING
 146       | NULL_

state 0
	$accept : . start $end  (0)
	TypeDefBlock : .  (5)

	TYPE  shift 1
	DECL  reduce 5

	start  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (4)

	ID  shift 4
	.  error

	TypeID  goto 5
	TypeDefList  goto 6
	TypeDef  goto 7


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : TypeDefBlock . GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock . GDeclBlock MainBlock  (2)
	start : TypeDefBlock . GDeclBlock  (3)

	DECL  shift 8
	.  error

	GDeclBlock  goto 9


state 4
	TypeID : ID .  (9)

	.  reduce 9


state 5
	TypeDef : TypeID . '{' FieldDeclList '}'  (8)

	'{'  shift 10
	.  error


state 6
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (4)
	TypeDefList : TypeDefList . TypeDef  (6)

	ID  shift 4
	ENDTYPE  shift 11
	.  error

	TypeID  goto 5
	TypeDef  goto 12


state 7
	TypeDefList : TypeDef .  (7)

	.  reduce 7


state 8
	GDeclBlock : DECL . GDeclList ENDDECL  (43)
	GDeclBlock : DECL . ENDDECL  (44)

	ID  shift 13
	TUPLE  shift 14
	ENDDECL  shift 15
	INT  shift 16
	STR  shift 17
	.  error

	GType  goto 18
	GDeclList  goto 19
	GDecl  goto 20


state 9
	start : TypeDefBlock GDeclBlock . FDefBlock MainBlock  (1)
	start : TypeDefBlock GDeclBlock . MainBlock  (2)
	start : TypeDefBlock GDeclBlock .  (3)

	ID  shift 21
	INT  shift 22
	STR  shift 23
	$end  reduce 3

	FDefBlock  goto 24
	MainBlock  goto 25
	FDef  goto 26
	FuncSign  goto 27
	FuncType  goto 28
	MainFunc  goto 29


state 10
	TypeDef : TypeID '{' . FieldDeclList '}'  (8)

	ID  shift 30
	INT  shift 31
	STR  shift 32
	.  error

	TypeName  goto 33
	FieldDecl  goto 34
	FieldDeclList  goto 35


state 11
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (4)

	.  reduce 4


state 12
	TypeDefList : TypeDefList TypeDef .  (6)

	.  reduce 6


state 13
	GType : ID .  (51)

	.  reduce 51


state 14
	GType : TUPLE . ID  (52)

	ID  shift 36
	.  error


state 15
	GDeclBlock : DECL ENDDECL .  (44)

	.  reduce 44


state 16
	GType : INT .  (49)

	.  reduce 49


state 17
	GType : STR .  (50)

	.  reduce 50


state 18
	GDecl : GType . GIDList ';'  (47)
	GDecl : GType . TupleDecl GIDList ';'  (48)

	ID  shift 37
	MUL  shift 38
	'('  shift 39
	.  error

	GPtrID  goto 40
	TupleDecl  goto 41
	GIDList  goto 42
	GID  goto 43


state 19
	GDeclBlock : DECL GDeclList . ENDDECL  (43)
	GDeclList : GDeclList . GDecl  (45)

	ID  shift 13
	TUPLE  shift 14
	ENDDECL  shift 44
	INT  shift 16
	STR  shift 17
	.  error

	GType  goto 18
	GDecl  goto 45


state 20
	GDeclList : GDecl .  (46)

	.  reduce 46


state 21
	FuncType : ID .  (90)

	.  reduce 90


state 22
	FuncType : INT .  (86)
	FuncType : INT . MUL  (88)
	MainFunc : INT . MAIN  (109)

	MAIN  shift 46
	MUL  shift 47
	ID  reduce 86


state 23
	FuncType : STR .  (87)
	FuncType : STR . MUL  (89)

	MUL  shift 48
	ID  reduce 87


state 24
	start : TypeDefBlock GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (81)

	ID  shift 21
	INT  shift 22
	STR  shift 23
	.  error

	MainBlock  goto 49
	FDef  goto 50
	FuncSign  goto 27
	FuncType  goto 28
	MainFunc  goto 29


state 25
	start : TypeDefBlock GDeclBlock MainBlock .  (2)

	.  reduce 2


state 26
	FDefBlock : FDef .  (82)

	.  reduce 82


state 27
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (84)

	'{'  shift 51
	.  error


state 28
	FuncSign : FuncType . FID '(' ParamList ')'  (85)

	ID  shift 52
	.  error

	FID  goto 53


state 29
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (108)

	'('  shift 54
	.  error


state 30
	TypeName : ID .  (15)

	.  reduce 15


state 31
	TypeName : INT .  (13)

	.  reduce 13


state 32
	TypeName : STR .  (14)

	.  reduce 14


state 33
	FieldDecl : TypeName . ID ';'  (12)

	ID  shift 55
	.  error


state 34
	FieldDeclList : FieldDecl .  (11)

	.  reduce 11


state 35
	TypeDef : TypeID '{' FieldDeclList . '}'  (8)
	FieldDeclList : FieldDeclList . FieldDecl  (10)

	ID  shift 30
	INT  shift 31
	STR  shift 32
	'}'  shift 56
	.  error

	TypeName  goto 33
	FieldDecl  goto 57


state 36
	GType : TUPLE ID .  (52)

	.  reduce 52


state 37
	GID : ID .  (55)
	GID : ID . '[' NUM ']'  (56)
	GID : ID . '(' ParamList ')'  (57)

	'['  shift 58
	'('  shift 59
	','  reduce 55
	';'  reduce 55


state 38
	GPtrID : MUL . ID  (60)

	ID  shift 60
	.  error


state 39
	TupleDecl : '(' . TupleFieldDeclList ')'  (61)

	INT  shift 61
	STR  shift 62
	.  error

	TupleFieldType  goto 63
	TupleFieldDecl  goto 64
	TupleFieldDeclList  goto 65


state 40
	GID : GPtrID .  (58)
	GID : GPtrID . '(' ParamList ')'  (59)

	'('  shift 66
	','  reduce 58
	';'  reduce 58


state 41
	GDecl : GType TupleDecl . GIDList ';'  (48)

	ID  shift 37
	MUL  shift 38
	.  error

	GPtrID  goto 40
	GIDList  goto 67
	GID  goto 43


state 42
	GDecl : GType GIDList . ';'  (47)
	GIDList : GIDList . ',' GID  (53)

	','  shift 68
	';'  shift 69
	.  error


state 43
	GIDList : GID .  (54)

	.  reduce 54


state 44
	GDeclBlock : DECL GDeclList ENDDECL .  (43)

	.  reduce 43


state 45
	GDeclList : GDeclList GDecl .  (45)

	.  reduce 45


state 46
	MainFunc : INT MAIN .  (109)

	.  reduce 109


state 47
	FuncType : INT MUL .  (88)

	.  reduce 88


state 48
	FuncType : STR MUL .  (89)

	.  reduce 89


state 49
	start : TypeDefBlock GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 50
	FDefBlock : FDefBlock FDef .  (81)

	.  reduce 81


state 51
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (84)
	LDeclBlock : .  (93)

	DECL  shift 70
	BEGIN_  reduce 93

	LDeclBlock  goto 71


state 52
	FID : ID .  (83)

	.  reduce 83


state 53
	FuncSign : FuncType FID . '(' ParamList ')'  (85)

	'('  shift 72
	.  error


state 54
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (108)

	')'  shift 73
	.  error


state 55
	FieldDecl : TypeName ID . ';'  (12)

	';'  shift 74
	.  error


state 56
	TypeDef : TypeID '{' FieldDeclList '}' .  (8)

	.  reduce 8


state 57
	FieldDeclList : FieldDeclList FieldDecl .  (10)

	.  reduce 10


state 58
	GID : ID '[' . NUM ']'  (56)

	NUM  shift 75
	.  error


state 59
	GID : ID '(' . ParamList ')'  (57)
	ParamList : .  (70)

	ID  shift 76
	INT  shift 77
	STR  shift 78
	','  reduce 70
	')'  reduce 70

	ParamList  goto 79
	Param  goto 80
	ParamType  goto 81


state 60
	GPtrID : MUL ID .  (60)

	.  reduce 60


state 61
	TupleFieldType : INT .  (65)

	.  reduce 65


state 62
	TupleFieldType : STR .  (66)

	.  reduce 66


state 63
	TupleFieldDecl : TupleFieldType . TupleFieldName  (64)

	ID  shift 82
	.  error

	TupleFieldName  goto 83


state 64
	TupleFieldDeclList : TupleFieldDecl .  (63)

	.  reduce 63


state 65
	TupleDecl : '(' TupleFieldDeclList . ')'  (61)
	TupleFieldDeclList : TupleFieldDeclList . ',' TupleFieldDecl  (62)

	','  shift 84
	')'  shift 85
	.  error


state 66
	GID : GPtrID '(' . ParamList ')'  (59)
	ParamList : .  (70)

	ID  shift 76
	INT  shift 77
	STR  shift 78
	','  reduce 70
	')'  reduce 70

	ParamList  goto 86
	Param  goto 80
	ParamType  goto 81


state 67
	GDecl : GType TupleDecl GIDList . ';'  (48)
	GIDList : GIDList . ',' GID  (53)

	','  shift 68
	';'  shift 87
	.  error


state 68
	GIDList : GIDList ',' . GID  (53)

	ID  shift 37
	MUL  shift 38
	.  error

	GPtrID  goto 40
	GID  goto 88


state 69
	GDecl : GType GIDList ';' .  (47)

	.  reduce 47


state 70
	LDeclBlock : DECL . LDeclList ENDDECL  (92)
	LDeclBlock : DECL . ENDDECL  (94)

	ID  shift 89
	TUPLE  shift 90
	ENDDECL  shift 91
	INT  shift 92
	STR  shift 93
	.  error

	LType  goto 94
	LDeclList  goto 95
	LDecl  goto 96


state 71
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (84)

	BEGIN_  shift 97
	.  error

	FBody  goto 98


state 72
	FuncSign : FuncType FID '(' . ParamList ')'  (85)
	ParamList : .  (70)

	ID  shift 76
	INT  shift 77
	STR  shift 78
	','  reduce 70
	')'  reduce 70

	ParamList  goto 99
	Param  goto 80
	ParamType  goto 81


state 73
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (108)

	'{'  shift 100
	.  error


state 74
	FieldDecl : TypeName ID ';' .  (12)

	.  reduce 12


state 75
	GID : ID '[' NUM . ']'  (56)

	']'  shift 101
	.  error


state 76
	ParamType : ID .  (76)

	.  reduce 76


state 77
	ParamType : INT .  (72)
	ParamType : INT . MUL  (74)

	MUL  shift 102
	ID  reduce 72


state 78
	ParamType : STR .  (73)
	ParamType : STR . MUL  (75)

	MUL  shift 103
	ID  reduce 73


state 79
	GID : ID '(' ParamList . ')'  (57)
	ParamList : ParamList . ',' Param  (68)

	','  shift 104
	')'  shift 105
	.  error


state 80
	ParamList : Param .  (69)

	.  reduce 69


state 81
	Param : ParamType . ID  (71)

	ID  shift 106
	.  error


state 82
	TupleFieldName : ID .  (67)

	.  reduce 67


state 83
	TupleFieldDecl : TupleFieldType TupleFieldName .  (64)

	.  reduce 64


state 84
	TupleFieldDeclList : TupleFieldDeclList ',' . TupleFieldDecl  (62)

	INT  shift 61
	STR  shift 62
	.  error

	TupleFieldType  goto 63
	TupleFieldDecl  goto 107


state 85
	TupleDecl : '(' TupleFieldDeclList ')' .  (61)

	.  reduce 61


state 86
	GID : GPtrID '(' ParamList . ')'  (59)
	ParamList : ParamList . ',' Param  (68)

	','  shift 104
	')'  shift 108
	.  error


state 87
	GDecl : GType TupleDecl GIDList ';' .  (48)

	.  reduce 48


state 88
	GIDList : GIDList ',' GID .  (53)

	.  reduce 53


state 89
	LType : ID .  (101)

	.  reduce 101


state 90
	LType : TUPLE . ID  (102)

	ID  shift 109
	.  error


state 91
	LDeclBlock : DECL ENDDECL .  (94)

	.  reduce 94


state 92
	LType : INT .  (99)

	.  reduce 99


state 93
	LType : STR .  (100)

	.  reduce 100


state 94
	LDecl : LType . LIDList ';'  (97)
	LDecl : LType . TupleDecl LIDList ';'  (98)

	ID  shift 110
	MUL  shift 111
	'('  shift 39
	.  error

	TupleDecl  goto 112
	LIDList  goto 113
	LID  goto 114


state 95
	LDeclBlock : DECL LDeclList . ENDDECL  (92)
	LDeclList : LDeclList . LDecl  (95)

	ID  shift 89
	TUPLE  shift 90
	ENDDECL  shift 115
	INT  shift 92
	STR  shift 93
	.  error

	LType  goto 94
	LDecl  goto 116


state 96
	LDeclList : LDecl .  (96)

	.  reduce 96


state 97
	FBody : BEGIN_ . Slist retStmt END ';'  (91)

	ID  shift 117
	READ  shift 118
	WRITE  shift 119
	MUL  shift 120
	BREAKPOINT  shift 121
	IF  shift 122
	WHILE  shift 123
	DO  shift 124
	BREAK  shift 125
	CONTINUE  shift 126
	.  error

	Slist  goto 127
	Stmt  goto 128
	inputStmt  goto 129
	outputStmt  goto 130
	assignStmt  goto 131
	ifStmt  goto 132
	whileStmt  goto 133
	doWhileStmt  goto 134
	breakStmt  goto 135
	continueStmt  goto 136
	breakPointStmt  goto 137
	StructField  goto 138
	InitializeStmt  goto 139
	AllocStmt  goto 140
	FreeStmt  goto 141
	DynaMemID  goto 142
	StructID  goto 143
	DynamicMemStmt  goto 144


state 98
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (84)

	'}'  shift 145
	.  error


state 99
	ParamList : ParamList . ',' Param  (68)
	FuncSign : FuncType FID '(' ParamList . ')'  (85)

	','  shift 104
	')'  shift 146
	.  error


state 100
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (108)
	LDeclBlock : .  (93)

	DECL  shift 70
	BEGIN_  reduce 93

	LDeclBlock  goto 147


state 101
	GID : ID '[' NUM ']' .  (56)

	.  reduce 56


state 102
	ParamType : INT MUL .  (74)

	.  reduce 74


state 103
	ParamType : STR MUL .  (75)

	.  reduce 75


state 104
	ParamList : ParamList ',' . Param  (68)

	ID  shift 76
	INT  shift 77
	STR  shift 78
	.  error

	Param  goto 148
	ParamType  goto 81


state 105
	GID : ID '(' ParamList ')' .  (57)

	.  reduce 57


state 106
	Param : ParamType ID .  (71)

	.  reduce 71


state 107
	TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl .  (62)

	.  reduce 62


state 108
	GID : GPtrID '(' ParamList ')' .  (59)

	.  reduce 59


state 109
	LType : TUPLE ID .  (102)

	.  reduce 102


state 110
	LID : ID .  (105)
	LID : ID . '[' NUM ']'  (106)

	'['  shift 149
	','  reduce 105
	';'  reduce 105


state 111
	LID : MUL . ID  (107)

	ID  shift 150
	.  error


state 112
	LDecl : LType TupleDecl . LIDList ';'  (98)

	ID  shift 110
	MUL  shift 111
	.  error

	LIDList  goto 151
	LID  goto 114


state 113
	LDecl : LType LIDList . ';'  (97)
	LIDList : LIDList . ',' LID  (103)

	','  shift 152
	';'  shift 153
	.  error


state 114
	LIDList : LID .  (104)

	.  reduce 104


state 115
	LDeclBlock : DECL LDeclList ENDDECL .  (92)

	.  reduce 92


state 116
	LDeclList : LDeclList LDecl .  (95)

	.  reduce 95


state 117
	assignStmt : ID . '=' expr  (30)
	assignStmt : ID . '[' expr ']' '=' expr  (31)
	DynaMemID : ID . '='  (117)
	DynaMemID : ID . '[' expr ']' '='  (118)
	StructID : ID .  (121)
	StructID : ID . '[' expr ']'  (122)

	'='  shift 154
	'['  shift 155
	'.'  reduce 121


state 118
	inputStmt : READ . expr  (28)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 164
	StructField  goto 165
	StructID  goto 143


state 119
	outputStmt : WRITE . expr  (29)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 166
	StructField  goto 165
	StructID  goto 143


state 120
	assignStmt : MUL . ID '=' expr  (32)

	ID  shift 167
	.  error


state 121
	breakPointStmt : BREAKPOINT .  (42)

	.  reduce 42


state 122
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (36)
	ifStmt : IF . expr THEN Slist ENDIF  (37)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 168
	StructField  goto 165
	StructID  goto 143


state 123
	whileStmt : WHILE . expr DO Slist ENDWHILE  (38)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 169
	StructField  goto 165
	StructID  goto 143


state 124
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (39)

	ID  shift 117
	READ  shift 118
	WRITE  shift 119
	MUL  shift 120
	BREAKPOINT  shift 121
	IF  shift 122
	WHILE  shift 123
	DO  shift 124
	BREAK  shift 125
	CONTINUE  shift 126
	.  error

	Slist  goto 170
	Stmt  goto 128
	inputStmt  goto 129
	outputStmt  goto 130
	assignStmt  goto 131
	ifStmt  goto 132
	whileStmt  goto 133
	doWhileStmt  goto 134
	breakStmt  goto 135
	continueStmt  goto 136
	breakPointStmt  goto 137
	StructField  goto 138
	InitializeStmt  goto 139
	AllocStmt  goto 140
	FreeStmt  goto 141
	DynaMemID  goto 142
	StructID  goto 143
	DynamicMemStmt  goto 144


state 125
	breakStmt : BREAK .  (40)

	.  reduce 40


state 126
	continueStmt : CONTINUE .  (41)

	.  reduce 41


state 127
	Slist : Slist . Stmt ';'  (16)
	FBody : BEGIN_ Slist . retStmt END ';'  (91)

	ID  shift 117
	READ  shift 118
	WRITE  shift 119
	MUL  shift 120
	BREAKPOINT  shift 121
	IF  shift 122
	WHILE  shift 123
	DO  shift 124
	BREAK  shift 125
	CONTINUE  shift 126
	RETURN  shift 171
	.  error

	Stmt  goto 172
	inputStmt  goto 129
	outputStmt  goto 130
	assignStmt  goto 131
	ifStmt  goto 132
	whileStmt  goto 133
	doWhileStmt  goto 134
	breakStmt  goto 135
	continueStmt  goto 136
	breakPointStmt  goto 137
	retStmt  goto 173
	StructField  goto 138
	InitializeStmt  goto 139
	AllocStmt  goto 140
	FreeStmt  goto 141
	DynaMemID  goto 142
	StructID  goto 143
	DynamicMemStmt  goto 144


state 128
	Slist : Stmt . ';'  (17)

	';'  shift 174
	.  error


state 129
	Stmt : inputStmt .  (18)

	.  reduce 18


state 130
	Stmt : outputStmt .  (19)

	.  reduce 19


state 131
	Stmt : assignStmt .  (20)

	.  reduce 20


state 132
	Stmt : ifStmt .  (21)

	.  reduce 21


state 133
	Stmt : whileStmt .  (22)

	.  reduce 22


state 134
	Stmt : doWhileStmt .  (23)

	.  reduce 23


state 135
	Stmt : breakStmt .  (24)

	.  reduce 24


state 136
	Stmt : continueStmt .  (25)

	.  reduce 25


state 137
	Stmt : breakPointStmt .  (26)

	.  reduce 26


state 138
	assignStmt : StructField . '=' expr  (33)
	StructField : StructField . '.' ID  (119)

	'='  shift 175
	'.'  shift 176
	.  error


state 139
	DynamicMemStmt : InitializeStmt .  (113)

	.  reduce 113


state 140
	DynamicMemStmt : AllocStmt .  (111)

	.  reduce 111


state 141
	DynamicMemStmt : FreeStmt .  (112)

	.  reduce 112


state 142
	AllocStmt : DynaMemID . ALLOC '(' ')'  (114)
	FreeStmt : DynaMemID . FREE '(' expr ')'  (115)
	InitializeStmt : DynaMemID . INITIALIZE '(' ')'  (116)

	INITIALIZE  shift 177
	ALLOC  shift 178
	FREE  shift 179
	.  error


state 143
	StructField : StructID . '.' ID  (120)

	'.'  shift 180
	.  error


state 144
	Stmt : DynamicMemStmt .  (27)

	.  reduce 27


state 145
	FDef : FuncSign '{' LDeclBlock FBody '}' .  (84)

	.  reduce 84


state 146
	FuncSign : FuncType FID '(' ParamList ')' .  (85)

	.  reduce 85


state 147
	MainBlock : MainFunc '(' ')' '{' LDeclBlock . MBody '}'  (108)

	BEGIN_  shift 181
	.  error

	MBody  goto 182


state 148
	ParamList : ParamList ',' Param .  (68)

	.  reduce 68


state 149
	LID : ID '[' . NUM ']'  (106)

	NUM  shift 183
	.  error


state 150
	LID : MUL ID .  (107)

	.  reduce 107


state 151
	LDecl : LType TupleDecl LIDList . ';'  (98)
	LIDList : LIDList . ',' LID  (103)

	','  shift 152
	';'  shift 184
	.  error


state 152
	LIDList : LIDList ',' . LID  (103)

	ID  shift 110
	MUL  shift 111
	.  error

	LID  goto 185


state 153
	LDecl : LType LIDList ';' .  (97)

	.  reduce 97


state 154
	assignStmt : ID '=' . expr  (30)
	DynaMemID : ID '=' .  (117)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	INITIALIZE  reduce 117
	ALLOC  reduce 117
	FREE  reduce 117

	expr  goto 186
	StructField  goto 165
	StructID  goto 143


state 155
	assignStmt : ID '[' . expr ']' '=' expr  (31)
	DynaMemID : ID '[' . expr ']' '='  (118)
	StructID : ID '[' . expr ']'  (122)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 187
	StructField  goto 165
	StructID  goto 143


state 156
	StructID : ID .  (121)
	StructID : ID . '[' expr ']'  (122)
	expr : ID . '(' ArgList ')'  (139)
	expr : ID . '[' expr ']'  (140)
	expr : ID .  (143)

	'['  shift 188
	'('  shift 189
	PLUS  reduce 143
	MINUS  reduce 143
	MUL  reduce 143
	DIV  reduce 143
	MOD  reduce 143
	THEN  reduce 143
	DO  reduce 143
	ENDWHILE  reduce 143
	AND  reduce 143
	OR  reduce 143
	','  reduce 143
	')'  reduce 143
	EQ  reduce 143
	NEQ  reduce 143
	LT  reduce 143
	LTE  reduce 143
	GT  reduce 143
	GTE  reduce 143
	';'  reduce 143
	']'  reduce 143
	'.'  reduce 121


state 157
	expr : NUM .  (144)

	.  reduce 144


state 158
	expr : STRING .  (145)

	.  reduce 145


state 159
	expr : NULL_ .  (146)

	.  reduce 146


state 160
	expr : MUL . ID  (142)

	ID  shift 190
	.  error


state 161
	expr : AMPERSAND . ID  (141)

	ID  shift 191
	.  error


state 162
	expr : NOT . expr  (136)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 192
	StructField  goto 165
	StructID  goto 143


state 163
	expr : '(' . expr ')'  (137)

	ID  shift 156
	NUM  shift 157
	STRING  shift 158
	NULL_  shift 159
	MUL  shift 160
	AMPERSAND  shift 161
	NOT  shift 162
	'('  shift 163
	.  error

	expr  goto 193
	StructField  goto 165
	StructID  goto 143


state 164
	inputStmt : READ expr .  (28)
	expr : expr . PLUS expr  (123)
	expr : expr . MINUS expr  (124)
	expr : expr . MUL expr  (125)
	expr : expr . DIV expr  (126)
	expr : expr . MOD expr  (127)
	expr : expr . EQ expr  (128)
	expr : expr . NEQ expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . LTE expr  (131)
	expr : expr . GT expr  (132)
	expr : expr . GTE expr  (133)
	expr : expr . AND expr  (134)
	expr : expr . OR expr  (135)

	PLUS  shift 194
	MINUS  shift 195
	MUL  shift 196
	DIV  shift 197
	MOD  shift 198
	AND  shift 199
	OR  shift 200
	EQ  shift 201
	NEQ  shift 202
	LT  shift 203
	LTE  shift 204
	GT  shift 205
	GTE  shift 206
	';'  reduce 28


state 165
	StructField : StructField . '.' ID  (119)
	expr : StructField .  (138)

	'.'  shift 176
	PLUS  reduce 138
	MINUS  reduce 138
	MUL  reduce 138
	DIV  reduce 138
	MOD  reduce 138
	THEN  reduce 138
	DO  reduce 138
	ENDWHILE  reduce 138
	AND  reduce 138
	OR  reduce 138
	','  reduce 138
	')'  reduce 138
	EQ  reduce 138
	NEQ  reduce 138
	LT  reduce 138
	LTE  reduce 138
	GT  reduce 138
	GTE  reduce 138
	';'  reduce 138
	']'  reduce 138


state 166
	outputStmt : WRITE expr .  (29)
	expr : expr . PLUS expr  (123)
	expr : expr . MINUS expr  (124)
	expr : expr . MUL expr  (125)
	expr : expr . DIV expr  (126)
	expr : expr . MOD expr  (127)
	expr : expr . EQ expr  (128)
	expr : expr . NEQ expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . LTE expr  (131)
	expr : expr . GT expr  (132)
	expr : expr . GTE expr  (133)
	expr : expr . AND expr  (134)
	expr : expr . OR expr  (135)

	PLUS  shift 194
	MINUS  shift 195
	MUL  shift 196
	DIV  shift 197
	MOD  shift 198
	AND  shift 199
	OR  shift 200
	EQ  shift 201
	NEQ  shift 202
	LT  shift 203
	LTE  shift 204
	GT  shift 205
	GTE  shift 206
	';'  reduce 29


state 167
	assignStmt : MUL ID . '=' expr  (32)

	'='  shift 207
	.  error


state 168
	ifStmt : IF expr . THEN Slist ELSE Slist ENDIF  (36)
	ifStmt : IF expr . THEN Slist ENDIF  (37)
	expr : expr . PLUS expr  (123)
	expr : expr . MINUS expr  (124)
	expr : expr . MUL expr  (125)
	expr : expr . DIV expr  (126)
	expr : expr . MOD expr  (127)
	expr : expr . EQ expr  (128)
	expr : expr . NEQ expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . LTE expr  (131)
	expr : expr . GT expr  (132)
	expr : expr . GTE expr  (133)
	expr : expr . AND expr  (134)
	expr : expr . OR expr  (135)
